--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/beyondnothing"]
 	path = themes/beyondnothing
-	url = git@github.com:olaoluwa-98/BeyondNothing.git
+	url = https://github.com/olaoluwa-98/BeyondNothing.git
