--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,59 +2,13 @@ name: Push to Prod
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup SSH
-        run: |
-          ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa
-          eval "$(ssh-agent -s)"
-          ssh-add ~/.ssh/id_rsa
-
-          SSH_PUB_KEY=`cat ~/.ssh/id_rsa.pub`
-          curl \
-            -f \
-            -X POST \
-            -H "Authorization: token $API_TOKEN" \
-            -H "Content-Type: application/json" \
-            -d "{\"title\":\"Code Chauffeur\", \"key\":\"$SSH_PUB_KEY\"}" \
-            -o ~/key.txt \
-            https://api.github.com/user/keys
-        env:
-          API_TOKEN: ${{ secrets.API_TOKEN }}
-
-      - name: Clone repo and configure Git
-        run: |
-          git clone --recurse-submodules git@github.com:$GITHUB_REPOSITORY.git .
-          git config --global user.email "awotunde.emmanuel1@gmail.com"
-          git config --global user.name "Emmanuel Awotunde"
-      - name: Install Hugo and run publish script
-        run: |
-          sh -c "$(curl -fsSL https://raw.githubusercontent.com/Linuxbrew/install/master/install.sh)"
-          test -d ~/.linuxbrew && eval $(~/.linuxbrew/bin/brew shellenv)
-          test -d /home/linuxbrew/.linuxbrew && eval $(/home/linuxbrew/.linuxbrew/bin/brew shellenv)
-          test -r ~/.bash_profile && echo "eval \$($(brew --prefix)/bin/brew shellenv)" >>~/.bash_profile
-          echo "eval \$($(brew --prefix)/bin/brew shellenv)" >>~/.profile
-          brew install hugo
-          hugo version
-
-          mkdir public
-          git worktree add -B gh-pages public origin/gh-pages
-          chmod +x ./deploy.sh && ./deploy.sh
-
-      - name: Delete public key on GH
-        run: |
-          KEY_ID=$(jq '.id' ~/key.txt)
-          curl \
-            -f \
-            -X DELETE \
-            -H "Authorization: token $API_TOKEN" \
-            -H "Content-Type: application/json" \
-            https://api.github.com/user/keys/$KEY_ID
-        env:
-          API_TOKEN: ${{ secrets.API_TOKEN }}
+    - uses: srt32/hugo-action@v0.0.3
+    - name: Hugo Actions
