--- a/config.toml
+++ b/config.toml
@@ -1,18 +1,18 @@
-baseURL = "https://codechauffeur.com/"
+baseURL = "https://codechauffeur.com"
 languageCode = "en-uk"
 title = "Code Chauffeur"
-email = "awotunde.emmanuel1@gmail.com"
-twitter = "https://twitter.com/olaoluwa_98"
+email = "emmanuel@codechauffeur.com"
+linkedin = "https://www.linkedin.com/in/emmanuel-awotunde"
 github = "https://github.com/olaoluwa-98"
 theme = "beyondnothing"
 copyright = "© Emmanuel Awotunde"
-home = "https://codechauffeur.com/"
+home = "https://codechauffeur.com"
 
 googleAnalytics = "UA-92329943-4"
 
 [author]
   name = "Emmanuel Awotunde"
-  homepage = "https://codechauffeur.com/"
+  homepage = "https://codechauffeur.com"
 
 [params]
     title = "Code Chauffeur"
@@ -55,15 +55,16 @@ paginatePath = "page"
 
     # Footer
     [[menu.footer]]
-        url = "http://twitter.com/olaoluwa_98"
-        name = "Twitter"
+      [[menu.footer]]
+        url = "https://www.linkedin.com/in/emmanuel-awotunde"
+        name = "Linkedin"
         weight = 1
     [[menu.footer]]
         url = "https://github.com/olaoluwa-98"
         name = "GitHub"
         weight = 2
     [[menu.footer]]
-        url = "mailto:awotunde.emmanuel1@gmail.com"
+        url = "mailto:emmanuel@codechauffeur.com"
         name = "Email"
         weight = 3
     [[menu.footer]]
